k3s_old/social-service/service.yml
apiVersion: v1
kind: Service
metadata:
  name: social-service
spec:
  selector:
    app: social-service
  ports:
    - protocol: TCP
      port: 8084
      targetPort: 8084
