k3s_old/social-service/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: social-service
spec:
  rules:
    - http:
        paths:
          - path: /api/social
            pathType: Prefix
            backend:
              service:
                name: social-service
                port:
                  number: 8084
